--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -4,6 +4,12 @@ layout: default
 
 {% include base_path %}
 
+{% if page.url == "/" %}
+  <div class="visitor-map">
+    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5wm3738tw7w&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
+  </div>
+{% endif %}
+
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
 {% endif %}
