--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,13 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+
+.visitor-map {
+  position: fixed;
+  top: 20px; /* 根据需要调整距离顶部的距离 */
+  right: 20px; /* 根据需要调整距离右侧的距离 */
+  z-index: 1000; /* 确保它位于其他元素之上 */
+  width: 15px; /* 设置地图的宽度 */
+  height: 15px; /* 设置地图的高度 */
+}
