--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,7 @@ layout: compress
   <!-- 将访客地图代码放在这里，确保它只在首页显示 -->
   {% if page.url == "/" %}
   <!--   <div class="visitor-map"> -->
-    <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=LBKgUGZd7DWD65y6iQTiduK_hVW3Zfrj91YYaprI-ME"></script>
-    <!--   <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5wm3738tw7w&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script> -->
+    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=LBKgUGZd7DWD65y6iQTiduK_hVW3Zfrj91YYaprI-ME'></script>
   <!--  </div>  -->
   {% endif %}
 
